k8s/infrastructure/configs/base/flux/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: webhook-receiver
  namespace: flux-system
spec:
  parentRefs:
    - kind: Gateway
      name: reverse-proxy
      namespace: envoy-gateway-system
  hostnames:
    - "webhook-receiver.${DOMAIN}"
  rules:
    - matches:
      - path:
          type: PathPrefix
          value: /
      backendRefs:
        - name: webhook-receiver
          namespace: flux-system
          port: 80
